# memchunk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
bench/: README.md
benches/: chunk.rs
examples/: bench_pattern.rs
scripts/: benchmark.py  chart.py
src/: lib.rs
